# technical-challenges

./: README.md
devops/challenge-01/: README.md
devops/challenge-01/api/: main.py  requirements.txt
devops/challenge-02/: README.md
devops/challenge-03/: README.md  pyproject.toml
devops/challenge-04/: README.md
