[tool.poetry]
name = "challenge-03"
version = "0.1.0"
description = ""
authors = ["Equipe DevOps <devops@genesisgenomics.com.br"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
